# gsio-net

./: .dockerignore  .gitignore  BACKLOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json
crates/gsio-client/: Cargo.toml
crates/gsio-client/examples/: basic_usage.rs
crates/gsio-client/src/: lib.rs
crates/gsio-node/: Cargo.toml  README.md
crates/gsio-node/src/: ledger.rs  lib.rs  main.rs  p2p.rs
crates/gsio-node/tests/: basic_test.rs  integration_test.rs  iroh_test.rs  ledger_test.rs  p2p_test.rs
crates/gsio-relay/: Cargo.toml  Dockerfile  README.md  package.json  relay-config.toml  wrangler.toml
crates/gsio-relay/src/: lib.rs
crates/gsio-relay/tests/: websocket_test.rs
crates/gsio-wallet/: Cargo.toml  README.md
crates/gsio-wallet/src/: lib.rs
