[package]
name = "gsio-client"
version = "0.1.0"
publish = false
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "time", "net"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.35", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
futures = "0.3.31"
