[package]
name = "gsio-node"
version = "0.1.0"
publish = false
resolver = "2"
edition = "2024"
license = "MIT"


[dependencies]
futures = { version = "0.3.31" }
libp2p = { version = "0.54.0", features = ["identify", "macros", "noise", "ping", "rendezvous", "tcp", "tokio", "yamux"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "time", "net"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
axum = { version = "0.8.4", features = ["json", "tracing"] }
socketioxide = { version = "0.17.2", features = ["tracing", "v4", "extensions"] }
rmpv = { version = "1.3.0", features = ["serde"] }
tower-http = { version = "0.6.6", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.35", features = ["serde"] }
sha2 = "0.10.8"
iroh = { version = "0.35.0", features = ["discovery-pkarr-dht", "discovery-local-network"] }
iroh-blobs = { version = "0.35.0", features = ["rpc"] }
url = "2.5.4"
iroh-relay = "0.35.0"