[package]
name = "gsio-wallet"
version = "0.1.0"
publish = false
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "time"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.35", features = ["serde"] }
thiserror = "1.0"
rand = "0.7.3"
rand_core = "0.5.1"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
hex = "0.4.3"
